2010-07-19  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Typing error in hook name

2010-07-15  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Fixed naming and formatting
	* Cleanup: Removed superfluous hook in processDirtyPages() method that was only available in Trunk

2010-07-14  Franz Ripfel  <franz.ripfel@abezet.de>

	* Fixed bug: Clearing cache of a single page deleted also all folders and files of subpages

2010-07-13  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: TYPO3 cache gets cleared on removing expired pages with the markDirtyInsteadOfDeletion setting enabled (thanks to Juergen Kussmann)

2010-05-28  Oliver Hader  <oliver@typo3.org>

	* Added feature: Integrate possibility to disable the clear cache post processing on deman during runtime

2010-05-27  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: markDirtyInsteadOfDeletion property shall only consider specific pages - thus not clear all or pages cache
	* Cleanup: Fixed formatting and inline type hints
	* Fixed bug: Database element is not removed if clearing files did not succeed
	* Fixed bug: Pages with an endtime that would expire a page before the general expiration time is not considered
	* Fixed bug: Additional hash is not written for database elements
	* Fixed bug: Additional hash is not considered for lookups when empty

2010-05-25  Oliver Hader  <oliver@typo3.org>

	* Added feature: Integrate hook to post process the cache scenario after (no matter whether static cache was written)

2010-04-30  Oliver Hader  <oliver@typo3.org>

	* Added feature: Integrate hook to handle deleting a static cached directory

2010-04-19  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #5290: Expect the scheme name at first position and allow to modifiy with hook

2010-04-15  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature of predefining/extending values that are stored in the database